--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,15 +6,19 @@
     <title>Document</title> <link rel="stylesheet" href="isa.css">
 </head>
 <body>
-    <h1>Prática de exercícios físicos, e alimentaçao saúdavel 
-    </h1>
-    <p> A prática de exercicios fisícos, com uma alimentçaõ boa e nutritiva traz diversos benefícios a saúde 
+    <h1>academia, onde a nutrição entra?</h1>
+    <p> a prática de exercicios fisícos, com uma alimentçaõ boa e nutritiva traz diversos benefícios a saúde 
         E como isso acontece? O que é ter uma alimentação saudável?
         Uma alimentação saudável consiste em um cardápio balanceado e que comporte todos os nutrientes de que o nosso corpo precisa. 
-        Em resumo, é o famoso “comer de tudo”, mas com moderação e responsabilidade.
-        <h2> Onde a alimentação entra nas atividades físicas?</h2>
-        Quando você se exercita, seu corpo tende a utilizar bastante energia proveniente do estoque de glicogênio. É por isso que incluir carboidratos,
-        como pão integral, macarrão, arroz, nozes e vegetais em sua dieta é super importante. Esses alimentos irão ajudar a repor os estoques de glicogênio, 
-        que é convertido em energia para treinar.Para atletas, a recomendação é ingerir de 1 a 1,2 gramas de carboidratos por quilo de peso corporal nas 4 horas 
-        seguintes ao treino.Ao manter a sua dieta equilibrada, você evita deficiências de nutrientes essenciais e ajuda o seu corpo a funcionar bem. 
-        Essa é a chave para manter uma vida ativa e com saúde.
+        Em resumo, é o famoso “comer de tudo”, mas com moderação e responsabilidade. 
+O 
+    </p>   <h2> Onde a alimentação entra nas atividades físicas?</h2>
+   <p> Quando você se exercita, seu corpo tende a utilizar bastante energia proveniente do estoque de glicogênio. É por isso que incluir carboidratos,
+    como pão integral, macarrão, arroz, nozes e vegetais em sua dieta é super importante. Esses alimentos irão ajudar a repor os estoques de glicogênio, 
+    que é convertido em energia para treinar.Para atletas, a recomendação é ingerir de 1 a 1,2 gramas de carboidratos por quilo de peso corporal nas 4 horas 
+    seguintes ao treino.Ao manter a sua dieta equilibrada, você evita deficiências de nutrientes essenciais e ajuda o seu corpo a funcionar bem. 
+    Essa é a chave para manter uma vida ativa e com saúde.</p>
+    <img src="nutri.jpeg">
+
+</body>
+</html>
